fix: adds icon support to text-field and text-area

--- a/packages/core/lib/components/text-field/_text-field.scss
+++ b/packages/core/lib/components/text-field/_text-field.scss
@@ -1,5 +1,13 @@
 @import '../../global/mixins/form-items';
 
+.#{$ray-class-prefix}text-field {
+  @include icon-support('text-field');
+}
+
+.#{$ray-class-prefix}text-area {
+  @include icon-support('text-area');
+}
+
 .#{$ray-class-prefix}text-field,
 .#{$ray-class-prefix}text-area {
   border: $ray-border-width solid $ray-color-gray-60;
