--- a/packages/core/lib/global/_variables.scss
+++ b/packages/core/lib/global/_variables.scss
@@ -24,6 +24,7 @@ $ray-field-height: 56px;
 $ray-field-height-compact: 40px;
 $ray-field-font-size: 16px;
 $ray-field-line-height: 28px;
+$ray-field-icon-width: 1rem;
 
 $ray-btn-v-spacing: 20px - $ray-border-width;
 $ray-btn-v-spacing-compact: 12px - $ray-border-width;
