--- a/packages/docs-app/src/components/ComponentCode/component-code.scss
+++ b/packages/docs-app/src/components/ComponentCode/component-code.scss
@@ -7,7 +7,7 @@
   max-width: 100%;
   display: block;
   color: $ray-color-white;
-  margin-bottom: 6rem;
+  margin-bottom: $ray-spacing-3xl;
   line-height: 1;
 
   &__live {
