--- a/packages/docs-app/src/components/SideNav/side-nav.scss
+++ b/packages/docs-app/src/components/SideNav/side-nav.scss
@@ -22,7 +22,7 @@
   z-index: 7000;
   margin-left: -999px;
   padding-left: 999px;
-  padding-top: 5rem;
+  padding-top: $ray-spacing-2xl;
   overflow-y: auto;
   background-color: hsla(240, 17%, 98%, 1);
   position: fixed;
