--- a/packages/core/src/components/text-field/text-area.html
+++ b/packages/core/src/components/text-field/text-area.html
@@ -1,11 +1,11 @@
 <div class="ray-text-area">
   <textarea
-    class="ray-text-field__input"
-    id="email"
+    class="ray-text-area__input"
+    id="notes"
     type="email"
     placeholder="mlem mlem mlem mlem"
   ></textarea>
-  <label class="ray-text-field__label" htmlFor="email">
+  <label class="ray-text-area__label" for="notes">
     Notes
   </label>
 </div>
