--- a/packages/core/src/components/text-field/text-field.html
+++ b/packages/core/src/components/text-field/text-field.html
@@ -5,7 +5,7 @@
     type="email"
     placeholder="arya.stark@winterfell.org"
   />
-  <label class="ray-text-field__label" htmlFor="email">
+  <label class="ray-text-field__label" for="email">
     Email address
   </label>
 </div>
