--- a/packages/docs-app/src/components/ComponentCode/component-code.scss
+++ b/packages/docs-app/src/components/ComponentCode/component-code.scss
@@ -17,7 +17,7 @@
     width: 100%;
     min-height: rem(200px);
     position: relative;
-    padding: 2rem 2rem 2.5rem;
+    padding: $ray-spacing-xl;
     margin: 1.5rem 0 0;
     background-color: #f5f7fa;
     color: $ray-color-text-dark;
