--- a/packages/docs-app/src/components/PageHeader/page-header.scss
+++ b/packages/docs-app/src/components/PageHeader/page-header.scss
@@ -13,6 +13,7 @@
   font-weight: 400;
   white-space: nowrap;
   text-transform: capitalize;
+  font-family: $ray-font-stack-mono;
 }
 
 .page-header__title {
