remove unused code

--- a/packages/docs-app/src/components/PageTable/page-table.scss
+++ b/packages/docs-app/src/components/PageTable/page-table.scss
@@ -1,7 +1,4 @@
-.page-table,
-.component-docs table,
-.typography-table table,
-.type-styles-table table {
+.page-table {
   width: 100%;
   max-width: 38rem;
   margin-top: 1rem;
