refactor: rename lib/ to src/, and application.scss to ray.scss

--- a/packages/docs-app/src/styles/index.scss
+++ b/packages/docs-app/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import '../../../core/lib/application.scss';
+@import '../../../core/src/ray.scss';
 
 $font-family: 'Apercu', 'Avenir', 'Helvetica Neue', Arial, sans-serif;
 $transition--base: 0.3s;
