feat: standardize build naming convention and add js compiled versions

--- a/packages/docs-app/src/styles/index.scss
+++ b/packages/docs-app/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import '../../../core/src/ray.scss';
+@import '../../../core/src/ray-core.scss';
 
 $font-family: 'Apercu', 'Avenir', 'Helvetica Neue', Arial, sans-serif;
 $transition--base: 0.3s;
