--- a/packages/docs-app/src/components/PageHeader/page-header.scss
+++ b/packages/docs-app/src/components/PageHeader/page-header.scss
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   padding-bottom: 0;
   width: 100%;
-  margin: $ray-spacing-2xl 0 0;
+  margin: 0;
 }
 
 .page-header__label {
