--- a/packages/core/src/components/image/_image.scss
+++ b/packages/core/src/components/image/_image.scss
@@ -18,6 +18,22 @@
   }
 }
 
+.#{$ray-class-prefix}caption {
+  font-size: 0.75rem;
+  line-height: 1.25rem;
+  max-height: 2.5rem;
+  font-family: $ray-font-stack-mono;
+  text-transform: uppercase;
+  overflow: hidden;
+  text-overflow: -o-ellipsis-lastline;
+  text-overflow: ellipsis;
+  text-align: right;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  margin-top: $ray-spacing-xs;
+}
+
 .#{$ray-class-prefix}image {
   @include image;
 
