fix(image): 4by3 (#28)
* fix(image): 4by3

* docs: add storybook and update docs

--- a/packages/core/src/components/image/_image.scss
+++ b/packages/core/src/components/image/_image.scss
@@ -46,7 +46,7 @@
     padding-bottom: calc(100% / (3 / 4));
   }
 
-  &--4By3 {
+  &--4by3 {
     @include image;
     padding-bottom: calc(100% / (4 / 3));
   }
