fix: fieldset styles and docs (#27)
* fix: fieldset styles and docs

* Update docs/html/checkbox/checkbox.html

Co-Authored-By: adamraider <adamjraider@gmail.com>

* fix: fieldset selectors

* nest legend class

* update fieldset class in example

--- a/packages/core/src/ray-core.scss
+++ b/packages/core/src/ray-core.scss
@@ -9,6 +9,7 @@
 @import './components/button/button';
 @import './components/radio-checkbox/radio-checkbox';
 @import './components/form-item/form-item';
+@import './components/fieldset/fieldset';
 @import './components/text-field/text-field';
 @import './components/select/select';
 @import './components/image/image';
