--- a/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
+++ b/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
@@ -7,10 +7,6 @@ $ray-radio-checkbox-width: 1rem;
   display: flex;
   cursor: pointer;
 
-  &:not(:last-of-type) {
-    margin-bottom: $ray-spacing-md;
-  }
-
   &__label {
     margin-left: $ray-spacing-md;
     line-height: $ray-field-line-height;
@@ -83,6 +79,13 @@ $ray-radio-checkbox-width: 1rem;
 
 .#{$ray-class-prefix}radio__input {
   border-radius: 50%;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  transition: box-shadow 0.15s ease;
+
+  &:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem $ray-color-blue-20;
+  }
 
   &::after {
     border-radius: 50%;
