docs: automatically generate color table (#34)

--- a/packages/core/src/global/_colors.scss
+++ b/packages/core/src/global/_colors.scss
@@ -24,3 +24,28 @@ $ray-color-gray-10: hsl(0, 0%, 100% - 10%);
 $ray-color-gray-30: hsl(0, 0%, 100% - 30%);
 $ray-color-gray-50: hsl(0, 0%, 100% - 50%);
 $ray-color-gray-60: hsl(0, 0%, 100% - 60%);
+
+:export {
+  ray-color-white: #ffffff;
+  ray-color-black: #000000;
+  ray-color-blue-10: hsl(240, 100%, 100% - 10%);
+  ray-color-blue-20: hsl(240, 100%, 100% - 20%);
+  ray-color-blue-50: hsl(240, 100%, 100% - 50%);
+  ray-color-blue-60: hsl(240, 100%, 100% - 60%);
+  ray-color-blue-70: hsl(240, 100%, 100% - 70%);
+  ray-color-red-10: hsl(0, 100%, 100% - 10%);
+  ray-color-red-20: hsl(0, 100%, 100% - 20%);
+  ray-color-red-50: hsl(0, 100%, 100% - 50%);
+  ray-color-red-60: hsl(0, 100%, 100% - 60%);
+  ray-color-red-70: hsl(0, 100%, 100% - 70%);
+  ray-color-green-10: hsl(132, 76%, 100% - 10%);
+  ray-color-green-20: hsl(132, 76%, 100% - 20%);
+  ray-color-green-70: hsl(132, 76%, 100% - 70%);
+  ray-color-green-80: hsl(132, 76%, 100% - 80%);
+  ray-color-green-90: hsl(132, 76%, 100% - 90%);
+  ray-color-gray-02: hsl(0, 0%, 100% - 02%);
+  ray-color-gray-10: hsl(0, 0%, 100% - 10%);
+  ray-color-gray-30: hsl(0, 0%, 100% - 30%);
+  ray-color-gray-50: hsl(0, 0%, 100% - 50%);
+  ray-color-gray-60: hsl(0, 0%, 100% - 60%);
+}
