--- a/packages/docs-app/src/styles/index.scss
+++ b/packages/docs-app/src/styles/index.scss
@@ -17,4 +17,5 @@ $code-border: $ray-color-gray-10;
 @import '../components/ComponentCode/component-code.scss';
 @import '../components/CodeExample/code-example.scss';
 @import '../components/CodeSnippet/code-snippet.scss';
+@import '../components/ColorTable/color-table.scss';
 @import 'syntax';
