fix(image): programmatically generate image classes and adds new ratios (#29)
* refactor(image): programatically generate image classes

* docs: add new aspec ratios to docs

--- a/packages/core/src/components/image/_image.scss
+++ b/packages/core/src/components/image/_image.scss
@@ -1,3 +1,11 @@
+$ray-image-ratio-map: (
+  4by3: calc(100% / (4 / 3)),
+  3by4: calc(100% / (3 / 4)),
+  1by1: calc(100% / 1),
+  16by9: calc(100% / (16 / 9)),
+  cinema: calc(100% / 2.4)
+);
+
 @mixin image {
   display: block;
   width: 100%;
@@ -37,18 +45,10 @@
 .#{$ray-class-prefix}image {
   @include image;
 
-  &--16by9 {
-    padding-bottom: calc(100% / (16 / 9));
-  }
-
-  &--3by4 {
-    @include image;
-    padding-bottom: calc(100% / (3 / 4));
-  }
-
-  &--4by3 {
-    @include image;
-    padding-bottom: calc(100% / (4 / 3));
+  @each $ratio, $value in $ray-image-ratio-map {
+    &--#{$ratio} {
+      padding-bottom: $value;
+    }
   }
 }
 
@@ -67,17 +67,9 @@
 .#{$ray-class-prefix}bg {
   @include background;
 
-  &--16by9 {
-    padding-bottom: calc(100% / (16 / 9));
-  }
-
-  &--3by4 {
-    @include background;
-    padding-bottom: calc(100% / (3 / 4));
-  }
-
-  &--4by3 {
-    @include background;
-    padding-bottom: calc(100% / (4 / 3));
+  @each $ratio, $value in $ray-image-ratio-map {
+    &--#{$ratio} {
+      padding-bottom: $value;
+    }
   }
 }
